tests/rosetta/out/Swift/cantor-set.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:49Z
let width = 81
let height = 5
var lines: [String] = [Any]()
for i in 0..<height {
    var row = ""
    var j = 0
    while j < width {
        row = row + "*"
        j = j + 1
    }
    lines = lines + [row]
}
func setChar(_ s: String, _ idx: Int, _ ch: String) -> String {
    return String(s[s.index(s.startIndex, offsetBy: 0)..<s.index(s.startIndex, offsetBy: idx)]) + ch + String(s[s.index(s.startIndex, offsetBy: idx + 1)..<s.index(s.startIndex, offsetBy: s.count)])
}
var stack: [[String: Int]] = [["start": 0, "len": width, "index": 1]]
while stack.count > 0 {
    var frame = stack[stack.count - 1]
    stack = Array(stack[0..<stack.count - 1])
    let start = frame["start"]
    let lenSeg = frame["len"]
    let index = frame["index"]
    let seg = Int((lenSeg / 3))
    if seg == 0 {
        continue
    }
    var i = index
    while i < height {
        var j = start + seg
        while j < start + 2 * seg {
            lines[i] = setChar(lines[i], j, " ")
            j = j + 1
        }
        i = i + 1
    }
    stack = stack + [["start": start, "len": seg, "index": index + 1]]
    stack = stack + [["start": start + seg * 2, "len": seg, "index": index + 1]]
}
for line in lines {
    print(line)
}
